--- a/src/css/cards/card-photo.scss
+++ b/src/css/cards/card-photo.scss
@@ -1,20 +1,25 @@
 .card-photo{
 	width:320px;
-	height:auto;
-	background:#efefec;
+	height:540px;
+	background-image:url(http://www.flamingoshanghai.com/blog/wp-content/uploads/2011/02/nadav-kander-yangtze-10-600x472.jpg);
+	background-size:cover;
+	background-position:center;
 	position: relative;
 	overflow:hidden;
+	
 	.photo-caption-container{
 		position: absolute;
 		bottom:0;
 		width:100%;
 	}
+
 	.photo-caption{
 		height:auto;
-		background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.60) 100%);
+		background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.70) 100%);
 		display: block;
 		height:100%;
-		padding:60px 10px 16px;
+		padding:40px 10px 16px;
+		
 		p{
 			margin:0;
 			font-size:14px;
@@ -24,6 +29,7 @@
 			text-shadow:0 1px 0 rgba(0,0,0,0.2);
 		}
 	}
+
 	img{
 		display:block;
 	}
