--- a/src/css/cards/card-paragraph.scss
+++ b/src/css/cards/card-paragraph.scss
@@ -1,6 +1,5 @@
-.card-paragraph{
+.card.card-paragraph{
 	background:#F8CE4B;
-	position: relative;
 
 	.paragraph-container{
 		position: absolute;
@@ -29,6 +28,21 @@
 
 		}
 		
+	}
+	
+	@media(min-width: breakpoints(tablet)){
+		height:auto;
+		padding:1px 20px;
+		position: relative;
+
+		.paragraph-container{
+			position: relative;
+			transform:none;
+			left:auto;
+			top:auto;
+			right:auto;
+			margin:60px 0 120px;
+		}
 	}
 	
 }
