--- a/src/css/cards/card-photo.scss
+++ b/src/css/cards/card-photo.scss
@@ -1,10 +1,14 @@
-.card-photo{
-	background-image:url(http://www.flamingoshanghai.com/blog/wp-content/uploads/2011/02/nadav-kander-yangtze-10-600x472.jpg);
-	background-size:cover;
-	background-position:center;
-	position: relative;
+.card.card-photo{
 	overflow:hidden;
 	
+	.photo-bg-container{
+		background-image:url(http://www.flamingoshanghai.com/blog/wp-content/uploads/2011/02/nadav-kander-yangtze-10-600x472.jpg);
+		background-size:cover;
+		background-position:center;
+		width:100%;
+		height:100%;
+		img{display:none;}
+	}
 	.photo-caption-container{
 		position: absolute;
 		bottom:0;
@@ -28,7 +32,16 @@
 		}
 	}
 
-	img{
-		display:block;
+	@media(min-width: breakpoints(tablet)){
+		height:auto;
+		position: relative;
+
+		.photo-bg-container{
+			background:none;
+			img{
+				display:block;
+				width:100%;
+			}
+		}
 	}
 }
