--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,9 +1,6 @@
 @import 'modules/_breakpoints';
 @import 'modules/_typography';
-@import 'cards/card-photo';
-@import 'cards/card-quote';
-@import 'cards/card-paragraph';
-@import 'cards/card-video';
+@import 'grid';
 // @import 'modules/_palette';
 // @import 'modules/_grid-system';
 // @import 'modules/_mq';
@@ -12,35 +9,40 @@
 body {
     margin: 0;
     padding: 0;
+    background:#333;
 }
 
 // Remove <figure> margin
 .interactive {
+    @import 'cards/card-photo';
+    @import 'cards/card-quote';
+    @import 'cards/card-paragraph';
+    @import 'cards/card-video';
+
     margin: 0;
-    padding:1px 0;
+    padding:0;
     *, * *{
     	box-sizing:border-box;
-    }
-
-    @media ( max-width: breakpoints(mobile) ) {
-        // Do something..
     }
 
     .card{
         position:fixed;
         width:100%;
         height:100%;
+
     }
 
-    @media(min-width: breakpoints(phablet)){
-        background:#333;
-
+    @media(min-width: breakpoints(tablet)){
         .card{
             position:relative;
-            width:320px;
+            min-width:320px;
             height:540px;
-            margin:20px;
+            margin:0 0 -20px;
             border-radius: 3px;
+            box-shadow:0 0 10px rgba(0,0,0,0.1);
         }
     }
 }
+
+
+
