--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -35,10 +35,10 @@ body {
     @media(min-width: breakpoints(tablet)){
         .card{
             position:relative;
-            min-width:320px;
+            min-width:300px;
             height:540px;
-            margin:0 0 -20px;
-            border-radius: 3px;
+            margin:0 0 20px;
+            // border-radius: 3px;
             box-shadow:0 0 10px rgba(0,0,0,0.1);
         }
     }
