--- a/src/css/cards/card-quote.scss
+++ b/src/css/cards/card-quote.scss
@@ -41,14 +41,16 @@
 			margin:0;
 			font-size:18px;
 			line-height:18px;
+			strong{
+				display:block;
+			}
 		}
 	}
 
 	@media(min-width: breakpoints(tablet)){
 		height:auto;
 		padding:1px 20px;
-		
-	position: relative;
+		position: relative;
 
 		.quote-container{
 			position: relative;
@@ -56,7 +58,51 @@
 			left:auto;
 			top:auto;
 			right:auto;
-			margin:60px 0 120px;
+			margin:36px 0 60px;
+		}
+		quote{
+			font-size:36px;
+			line-height:42px;
+		}
+		.quote-icon{
+			height:30px;
+		}
+		.quote-credit{
+			margin-top:49px;
+		}
+
+		&.size-l, &.size-xl{
+			quote{
+				font-size:42px;
+				line-height:48px;
+			}
+		}
+	}
+	@media(min-width: breakpoints(desktop)){
+		&.size-m{
+			quote{
+				font-size:42px;
+				line-height:48px;
+			}
+		}
+
+		&.size-l, &.size-xl{
+			padding-left:40px;
+			padding-right:40px;
+			.quote-container{
+				margin: 42px 0 72px;
+			}
+			.quote-credit p{
+				font-size:20px;
+				line-height:24px;
+			}
+		}
+
+		&.size-xl{
+			quote{
+				font-size:48px;
+				line-height:54px;
+			}
 		}
 	}
 }
