--- a/src/css/cards/card-video.scss
+++ b/src/css/cards/card-video.scss
@@ -29,7 +29,8 @@
 		z-index:1;
 		overflow: hidden;
 		position: absolute;
-		p{
+		
+		.placeholder-mobile p{
 			font-family:$f-sans-serif-text;
 			font-size:14px;
 			line-height:18px;
@@ -61,6 +62,18 @@
 	@media(min-width: breakpoints(tablet)){
 		height:auto;
 		position: relative;
+
+		.photo-placeholder-container{
+			position: absolute;
+			top:0;
+			left:0;
+			cursor:pointer;
+			&:hover{
+				.unmute-button{
+					background-color:rgba(0,0,0,1);
+				}
+			}
+		}
 		.placeholder-background{
 			display:none;
 			background:none;
@@ -71,6 +84,7 @@
 		}
 		.placeholder-desktop{
 			display:block;
+			text-align:center;
 			p{
 				position: relative;
 				transform:none;
@@ -78,6 +92,32 @@
 		}
 		.video-container{
 			display:block;
+		}
+		.unmute-button{
+			background-color:rgba(0,0,0,0.4);
+			background-image: url(../imgs/unmute-btn.svg);
+			background-size:20px;
+			background-repeat:no-repeat;
+			background-position:14px center;
+			border:none;
+			border-radius:80px;
+			color:#fff;
+			font-family:$f-sans-serif-text;
+			font-size:14px;
+			height:36px;
+			transition:background-color 0.4s;
+			padding:1px 14px 0 44px;
+		}
+		
+
+		&.size-m, &.size-l, &.size-xl{
+			.unmute-button{
+				font-size:16px;
+				height:44px;
+				background-size:24px;
+				padding: 1px 20px 0 54px;
+			}
+			
 		}
 		
 	}
