--- a/src/css/cards/card-video.scss
+++ b/src/css/cards/card-video.scss
@@ -92,6 +92,7 @@
 		}
 		.video-container{
 			display:block;
+			line-height:0;
 		}
 		.unmute-button{
 			background-color:rgba(0,0,0,0.4);
@@ -107,6 +108,7 @@
 			height:36px;
 			transition:background-color 0.4s;
 			padding:1px 14px 0 44px;
+			outline: none;
 		}
 		
 
