--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -30,9 +30,6 @@ body {
 
 
     .card{
-        position:absolute;
-
-        position:fixed;
         width:100%;
         height:100%;
     }
@@ -50,7 +47,7 @@ body {
             position:relative;
             min-width:300px;
             height:540px;
-            margin:0 0 20px;
+            margin:0;
             // border-radius: 3px;
             box-shadow:0 0 10px rgba(0,0,0,0.1);
         }
