--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,6 +21,7 @@ body {
     @import 'cards/card-quote';
     @import 'cards/card-paragraph';
     @import 'cards/card-video';
+    @import 'cards/card-audio';
 
     margin: 0;
     padding:0;
