--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -29,6 +29,9 @@ body {
     	box-sizing:border-box;
     }
 
+    .swiper-container{
+        border:none;
+    }
 
     .card{
         width:100%;
