--- a/src/css/cards/card-paragraph.scss
+++ b/src/css/cards/card-paragraph.scss
@@ -29,6 +29,27 @@
 		}
 		
 	}
+
+	@media (min-width:480px) and (max-width:breakpoints(tablet)){
+		.paragraph-container{
+			right:40px;
+			left:40px;
+		}
+	}
+	@media (min-width:620px) and (max-width:breakpoints(tablet)){
+		.paragraph-container{
+			right:60px;
+			left:60px;
+			h3{
+				font-size:36px;
+				line-height:42px;
+			}
+			p{
+				font-size:18px;
+			}
+		}
+
+	}
 	
 	@media(min-width: breakpoints(tablet)){
 		height:auto;
