quote data coming from spreadsheet

--- a/src/css/cards/card-video.scss
+++ b/src/css/cards/card-video.scss
@@ -68,7 +68,7 @@
 		border-radius:80px;
 		border:none;
 		outline:none;
-		background-image: url(../imgs/play-arrow.svg);
+		background-image: url(/imgs/play-arrow.svg);
 		background-repeat:no-repeat;
 		background-position:28px center;
 		float:left;
@@ -115,7 +115,7 @@
 		}
 		.unmute-button{
 			background-color:rgba(0,0,0,0.4);
-			background-image: url(../imgs/unmute-btn.svg);
+			background-image: url(/imgs/unmute-btn.svg);
 			background-size:20px;
 			background-repeat:no-repeat;
 			background-position:14px center;
