--- a/src/css/grid.scss
+++ b/src/css/grid.scss
@@ -2,11 +2,11 @@
     @media(min-width: breakpoints(tablet)){
         #inner-wrapper{
             background:rgba(255,255,255,0.1);
-            padding-top:20px;
+            padding-top:1px;
             padding-right:20px;
             padding-bottom:40px;
             padding-left:100px;
-            margin:0 auto;
+            margin:-1px auto 0;
             max-width:740px;
         }
 
