locators, multiple paragraphs, remove quotemark

--- a/src/css/cards/card-audio.scss
+++ b/src/css/cards/card-audio.scss
@@ -64,8 +64,8 @@
 			background:#fff;
 		}
 		p{
-			font-family:$f-serif-headline;
-			font-size:18px;
+			font-family:$f-serif-text;
+			font-size:16px;
 			line-height:24px;
 			padding-top:6px;
 			margin:0;
