--- a/src/css/cards/card-title.scss
+++ b/src/css/cards/card-title.scss
@@ -4,11 +4,20 @@
 		margin:-20px -20px 20px -20px;
 		width:auto;
 		background:transparent;
+		position: relative;
+		.title-heading-container{
+            position: relative;
+        }
+        .title-locator{
+        	position: absolute;
+        	left:20px;
+        	top:40px;
+        }
 		.title-heading{
 			font-family:$f-serif-headline;
 			max-width:480px;
 			margin-left:20px;
-			padding:20px 0 80px;
+			padding:40px 0 80px;
 			p{
 				font-family: $f-sans-serif-text;
 				margin:0;
@@ -19,8 +28,8 @@
 				}
 			}
 			h2{
-				font-size:42px;
-				line-height:42px;
+				font-size:56px;
+				line-height:56px;
 				margin:0;
 			}
 			h3{
