--- a/src/css/cards/card-title.scss
+++ b/src/css/cards/card-title.scss
@@ -1,3 +1,43 @@
+@media(max-width:breakpoints(tablet)){
+	.title-heading-container{
+		padding:0 20px;
+		font-family:$f-serif-headline;
+		width:100%;
+	}
+	.title-locator{
+		display:none;
+	}
+	.title-heading{
+		max-width:480px;
+		
+		p{
+			font-family: $f-sans-serif-text;
+			margin:0;
+			font-size:14px;
+			color:rgba(255,255,255,0.6);
+			strong{
+				color:#ffbb00;
+			}
+		}
+
+		
+		h2{
+			font-size:42px;
+			line-height:42px;
+			margin:0;
+		}
+		h3{
+			font-size:18px;
+			line-height:24px;
+			font-weight:100;
+			margin:24px 0 0;
+		}
+	}
+	.drone-stroke{
+		display:none;
+	}
+}
+
 @media(min-width:breakpoints(tablet)){
 	.swiper-slide.slide-title{
 		display:block;
@@ -12,31 +52,17 @@
         	position: absolute;
         	left:20px;
         	top:40px;
+        	display: block;
         }
 		.title-heading{
-			font-family:$f-serif-headline;
-			max-width:480px;
-			margin-left:20px;
 			padding:40px 0 80px;
-			p{
-				font-family: $f-sans-serif-text;
-				margin:0;
-				font-size:14px;
-				color:rgba(255,255,255,0.6);
-				strong{
-					color:#ffbb00;
-				}
-			}
 			h2{
 				font-size:56px;
 				line-height:56px;
-				margin:0;
 			}
 			h3{
 				font-size:22px;
 				line-height:30px;
-				font-weight:100;
-				margin:24px 0 0;
 			}
 		}
 	}
