--- a/src/css/cards/card-title.scss
+++ b/src/css/cards/card-title.scss
@@ -8,7 +8,7 @@
 	display:none;
 }
 .title-heading{
-	max-width:480px;
+	max-width:620px;
 	
 	p{
 		font-family: $f-sans-serif-text;
@@ -41,7 +41,7 @@
 @media(min-width:breakpoints(tablet)){
 	.swiper-slide.slide-title{
 		display:block;
-		margin:-20px -20px 20px -20px;
+		margin:0 -20px 20px -20px;
 		width:auto;
 		background:transparent;
 		position: relative;
@@ -56,7 +56,7 @@
         	display: block;
         }
 		.title-heading{
-			padding:40px 0 80px;
+			padding:40px 0 40px;
 			h2{
 				font-size:56px;
 				line-height:56px;
