--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,6 +1,6 @@
 @media(min-width: breakpoints(tablet)){
     #header-wrapper{
-        background:#665E51;
+        background:#665C50;
         width:auto;
         margin:0 -20px;
         min-height:740px;
@@ -13,7 +13,7 @@
         	z-index: 1;
             margin-left:80px;
         	img{
-        		width:105%;
+        		width:115%;
                 margin-left:0;
         	}
         }
