--- a/src/css/swiper.scss
+++ b/src/css/swiper.scss
@@ -456,7 +456,7 @@ button.swiper-pagination-bullet {
 //custom elements
 .swiper-container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     border-bottom: 1px dotted #fff;
 }
 .swiper-slide {
