--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -90,7 +90,7 @@ body {
             outline: none;
             &.swiper-button-next{
                 display:block;
-                background-image: url(../imgs/arrow-icon.svg);
+                background-image: url(/imgs/arrow-icon.svg);
                 background-position: center;
                 background-repeat:no-repeat;
             }
