--- a/src/css/cards/card-photo.scss
+++ b/src/css/cards/card-photo.scss
@@ -16,7 +16,7 @@
 
 	.photo-caption{
 		height:auto;
-		background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.70) 100%);
+		// background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.70) 100%);
 		display: block;
 		height:100%;
 		padding:40px 10px 16px;
