--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -122,6 +122,7 @@
         		font-size:22px;
         		line-height:30px;
         		max-width:540px;
+                font-weight:400;
         		position: absolute;
         		bottom:10px;
         		left:340px;
