--- a/src/css/cards/card-title.scss
+++ b/src/css/cards/card-title.scss
@@ -37,6 +37,13 @@
 	display:none;
 }
 
+.swiper-pagination-controls {
+	position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 45px;
+    left: 0;
+}
 
 @media(min-width:breakpoints(tablet)){
 	.swiper-slide.slide-title{
