styles transition card

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -24,6 +24,7 @@ body {
     @import 'cards/card-paragraph';
     @import 'cards/card-video';
     @import 'cards/card-audio';
+    @import 'cards/card-transition';
 
     margin: 0;
     padding:0;
