--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -25,6 +25,7 @@ body {
     @import 'cards/card-video';
     @import 'cards/card-audio';
     @import 'cards/card-transition';
+    @import 'cards/card-iframe';
 
     margin: 0;
     padding:0;
