adds share html

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -26,6 +26,7 @@ body {
     @import 'cards/card-audio';
     @import 'cards/card-transition';
     @import 'cards/card-iframe';
+    @import 'modules/share';
 
     margin: 0;
     padding:0;
