--- a/src/css/cards/card-title.scss
+++ b/src/css/cards/card-title.scss
@@ -79,11 +79,34 @@
 		height:280px;
 		overflow: hidden;
 		display:block;
+		position: relative;
 		background:rgba(255,255,255,0.2);
 		video{
 			width:100%;
 			height:auto;
 			margin-top:-120px;
+		}
+	}
+	.drone-title{
+		position: absolute;
+		bottom:24px;
+		p{
+			font-family: $f-sans-serif-text;
+			margin:0;
+			font-size:14px;
+			color:rgba(255,255,255,0.6);
+			strong{
+				color:#ffbb00;
+			}
+		}
+
+		
+		h2{
+			font-size:42px;
+			line-height:42px;
+			margin:0;
+			font-weight:bold;
+			font-family:$f-serif-headline;
 		}
 	}
 }
