--- a/src/css/grid.scss
+++ b/src/css/grid.scss
@@ -55,8 +55,9 @@
         .size-xs    {width:300px;}
         .size-s     {width:460px;}
         .size-m     {width:620px;}
-        .size-l     {width:940px;}
-        .size-xl    {width:1100px;}
+        .size-l     {width:780px;}
+        .size-xl    {width:940px;}
+        .size-xxl    {width:1100px;}
         
         .margin-1-col    {margin-left:160px;}
         .margin-2-col    {margin-left:320px;}
