--- a/src/css/cards/card-video.scss
+++ b/src/css/cards/card-video.scss
@@ -88,6 +88,7 @@
 	@media(min-width: breakpoints(tablet)){
 		height:auto;
 		position: relative;
+		margin-top:1em;
 
 		.photo-placeholder-container{
 			position: absolute;
