--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,7 +11,7 @@
 body {
     margin: 0;
     padding: 0;
-    background:#665C50;
+    background:#333;
     transition:background 1s;
 }
 
@@ -142,8 +142,8 @@ body {
             height:540px;
             margin:0;
             // border-radius: 3px;
-            box-shadow:0 0 10px rgba(0,0,0,0.1);
-            margin-top:-20px;
+            // box-shadow:0 0 10px rgba(0,0,0,0.1);
+            // margin-top:-20px;
             transition: margin 0.4s;
         }
         .swiper-slide-pending{
