--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,7 +12,7 @@ body {
     margin: 0;
     padding: 0;
     background:#333;
-    transition:background 1s;
+    transition:background 4s linear;
 }
 
 // Remove <figure> margin
@@ -155,7 +155,7 @@ body {
             background:transparent;
         }
         .slides-chapter{
-            margin-bottom:180px;
+            margin-bottom:120px;
         }
         #blocks-wrapper{
             overflow: hidden;
